test/arrays/johnk/literals_bad_types.good
literals_bad_types.chpl:1: error: Array literal element 2 expected to be of type imag(64) but is of type string
