test/arrays/johnk/literals_bad_types.chpl
var Bad = [1.0i, "test", 2.0];
